# ITMO-s5

./: .gitmodules
conspects/functional/: Comonad.md  DSL.md  FFI.md  Kinds.md  String, Text, ByteString.md  Transformers.md  base.md  hw.md  parallelism.md  perfomance.md  style.md  Осталось выучить 2.md  Осталось выучить.md  презы.md
conspects/functional/lenses/: Lens.md  Lenses - Artem Kozak.md  Macro.md
conspects/functional/monads/: a. Maybe.md  b. Either.md  c. List.md  d. Reader.md  h. State.md
conspects/functional/type classes/: Semigroup Monoid.md
functional-programming/hw1-cde8eae8/: hw1.cabal  package.yaml  stack.yaml
functional-programming/hw1-cde8eae8/src/: Concat.hs  FoldableTree.hs  Monoids.hs  NaturalNumbers.hs  Split.hs  Tree.hs  WeekDays.hs
functional-programming/hw1-cde8eae8/test/: FoldableTreeTests.hs  MonoidsTests.hs  NaturalNumbersTests.hs  SplitTests.hs  Test.hs  TreeTests.hs  WeekdaysTests.hs
functional-programming/hw2-cde8eae8/: .gitignore  ChangeLog.md  README.md  hw2-cde8eae8.cabal  package.yaml
functional-programming/hw2-cde8eae8/src/: Arithmetic.hs  MovingAverage.hs  NonEmpty.hs  Parser.hs  StringSum.hs  Tree.hs
functional-programming/hw2-cde8eae8/test/: ArithmeticTest.hs  ArithmeticTests.hs  MovingAverageTest.hs  MovingAverageTests.hs  NonEmptyTest.hs  NonEmptyTests.hs  ParserTest.hs  ParserTests.hs  Spec.hs  StringSumTest.hs  StringSumTests.hs  TreeTest.hs
functional-programming/hw3-cde8eae8/: ChangeLog.md  README.md  hw3-cde8eae8.cabal  package.yaml  stack.yaml
functional-programming/hw3-cde8eae8/app/: Console.hs  GUI.hs  Main.hs
functional-programming/hw3-cde8eae8/src/: Commands.hs  FS.hs  FileManager.hs  FileManagerEnv.hs
functional-programming/hw3-cde8eae8/test/: MockFS.hs  Spec.hs
functional-programming/hw4-cde8eae8/: ChangeLog.md  README.md  hw4-cde8eae8.cabal  package.yaml  stack.yaml
functional-programming/hw4-cde8eae8/app/: CovidConsole.hs  Main.hs
functional-programming/hw4-cde8eae8/src/: Covid.hs  Halyava.hs  HalyavaShow.hs  Point.hs
functional-programming/hw4-cde8eae8/test/: HalyavaTest.hs  PointTest.hs  Spec.hs
machine-learning/codeforces/: CMakeLists.txt  cf.cpp  debug.cpp  debug.h  knn.cpp  knn.py  python-module.h
machine-learning/codeforces/LSTM/: CMakeLists.txt  lstm.cpp
machine-learning/codeforces/bayes/: CMakeLists.txt  bayes-cf.cpp  bayes.cpp  bayes.h  task
machine-learning/codeforces/binary-network/: CMakeLists.txt  binary-network.cpp  checker.py
machine-learning/codeforces/knn/: CMakeLists.txt  F-measure.cpp  cross-validation-split.cpp  knn-module.cpp  knn.h  regression.cpp
machine-learning/codeforces/linear-regression/: CMakeLists.txt  linear-regression.cpp
machine-learning/codeforces/matrix-function/: CMakeLists.txt  matrix-function.cpp
machine-learning/codeforces/matrix-function-3d/: CMakeLists.txt  matrix-3d.cpp
machine-learning/codeforces/svm/: CMakeLists.txt  svm.cpp
machine-learning/codeforces/tree/: CMakeLists.txt  tree.cpp
parallel-programming/: clone.py
parallel-programming/dynamic-array/src/: DynamicArrayImpl.kt
parallel-programming/dynamic-array/test/: DynamicArrayTest.kt
parallel-programming/lamport-lock-fail/: draft
parallel-programming/possible-executions-analysis/: draft.txt  solution.txt
parallel-programming/universal-construction/: README.md
translation/labs/lab2/: CMakeLists.txt  main.cpp  testgen.cpp
translation/labs/lab2/include/: parser.h  tree.h
translation/labs/lab2/src/: lexer.cpp  lexer.h  parser.cpp  tree.cpp
translation/labs/lab2/tests/: test.cpp
translation/labs/lab4-cpp/: CMakeLists.txt  calcgrammar  code_generator.h  gram.cpp  gram.hpp  gram.y  logicgrammar  main.cpp  parser.h  parsing_rule_structures.h  parsing_table_generator.cpp  parsing_table_generator.h  project_rule_structures.cpp  simple_grammar.h  simplecalc  test.cpp  test.h  testgrammar
translation/labs/lab4-cpp/debug/: debug.h
translation/labs/lab4-cpp/lab2/lab2/: CMakeLists.txt  main.cpp
translation/labs/lab4-cpp/lab2/lab2/include/: parser.cpp  parser.h  parser_info.cpp  parser_info.h  tree.h
translation/labs/lab4-cpp/lab2/lab2/src/: lexer.cpp  lexer.h  tree.cpp
translation/labs/lab4-cpp/testparser/: main.cpp
(+59 files in other folders)
